--- a/Frontend/youRJube/src/app/app.component.scss
+++ b/Frontend/youRJube/src/app/app.component.scss
@@ -7,6 +7,8 @@
     flex-direction: row;
     position: fixed;
     width: 100vw;
+    z-index: 1;
+    background-color: white;
 }
 
 .image-container{
@@ -16,6 +18,7 @@
     .menuLineWrapper{
         margin-left: 2vw;
         margin-right: 1.5vw;
+        cursor: pointer;
     
         .menuLineImage{
             width: 20px;
@@ -86,32 +89,33 @@
             text-align: center;
             i{
                 font-size: 23px;
+                color: rgb(66, 66, 66);
             }
         }
     }
 
     .notifications-dropdown{
-        margin-right: 2vw;
 
         a{
             text-align: center;
             i{
                 font-size: 23px;
+                color: rgb(66, 66, 66);
             }
         }
 
         .dropdown-content {
             display: none;
             position: absolute;
-            left: 80vw;
+            left: 90vw;
             background-color: white;
-            min-width: 160px;
+            width: 10vw;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
 
             a {
                 color: gray;
-                padding: 12px 16px;
+                padding: 3px 4px;
                 text-decoration: none;
                 display: block;
                 border-bottom: 1px lightgray solid;
@@ -121,6 +125,7 @@
                     margin-right: 0.1vw;
                     padding: 1vw;
                     font-size: 22px;
+                    color: rgb(66, 66, 66);
                 }
             }
         }
@@ -129,9 +134,11 @@
     .settings-dropdown{
         a{
             text-align: center;
+            cursor: pointer;
     
             i{
                 font-size: 28px;
+                color: rgb(66, 66, 66);
             }
         }
 
@@ -140,13 +147,13 @@
             position: absolute;
             left: 80vw;
             background-color: white;
-            min-width: 160px;
+            width: 15vw;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
 
             a {
                 color: gray;
-                padding: 12px 16px;
+                padding: 3px 4px;
                 text-decoration: none;
                 display: block;
                 border-bottom: 1px lightgray solid;
@@ -175,6 +182,7 @@
             align-items: center;
             padding: 7px;
             text-decoration: none;
+            cursor: pointer;
     
             i{
                 font-size: 28px;
@@ -193,6 +201,54 @@
 
     .signin-button-container:hover{
         background: rgb(232, 238, 240);
+    }
+
+    .user-profile{
+        margin: 0vw 1.5vw;
+
+        .user-profile-picture{
+            cursor: pointer;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            left: 80vw;
+            background-color: white;
+            width: 18vw;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+
+            .user-information{
+                text-align: center;
+                border-bottom: 1px lightgray solid;
+
+                h4{
+                    margin-bottom: 2vh;
+                }
+            }
+
+            a {
+                color: gray;
+                padding: 3px 4px;
+                text-decoration: none;
+                display: block;
+                border-bottom: 1px lightgray solid;
+                text-align: left;
+                cursor: pointer;
+
+                i{
+                    margin-right: 0.1vw;
+                    padding: 1vw;
+                    font-size: 22px;
+                    color: rgb(66, 66, 66);
+                }
+            }
+        }
+
+        .dropdown-content a:hover{
+            background-color: rgb(240, 238, 238);
+        }
     }
 }
 
@@ -334,15 +390,21 @@
 }
 
 .sidebar-container{
-
+    z-index: 1;
     overflow-y: auto;
     position: fixed;
-    top: 60px;
+    top: 50px;
     height: 100vh;
     transition: all 0.3s ease;
     border-right: 1px lightgray solid;
+    background-color: white;
 
-    ul{
+    hr{
+        border: 1px solid rgb(235, 229, 229);
+        margin: 2vh 1vw;
+    }
+
+    ul.buttons{
         list-style: none;   
         padding: 0;
 
@@ -377,15 +439,102 @@
             background-color: rgb(228, 218, 218);
         }
     }
+
+    ul.links{
+        list-style: none;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+
+        li{
+            margin: 0.75vh;
+            a{
+                color: rgb(59, 58, 58);
+                text-decoration: none;
+                font-size: 15px;
+                font-weight: bold;
+            }
+
+            a:hover{
+                color: rgb(138, 135, 135);
+            }
+        }
+    }
 }
 
 .content-container{
     position: absolute;
     display: block;
-    z-index: -1;
+    z-index: -2;
+	transition-duration: 0.3s;
 }
 
 .content-container.collapse{
     transition-duration: 0.3s;
 }
 
+.keyboard-shortcut {
+    visibility: hidden;
+    position: fixed; 
+    z-index: 3;
+    padding-top: 12vh;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        max-height: 70vh;
+
+        .title{
+            font-size: 30px;
+            margin-left: 2vw;
+            margin-top: 2vh;
+        }
+
+        .content{
+            padding-top: 3vh;
+
+            ul{
+                list-style: none;
+                li{
+                    width: 65vw;
+                    margin: 4vh 2vw;
+                    display: flex;
+                    font-size: 18px;
+                    border-bottom: 1px lightgray solid;
+
+                    .explanation{
+                        margin-bottom: 2vh;
+                        width: 50vw;
+                    }
+                }
+            }
+        }
+      }
+      
+  }
+  
+
+  
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
