--- a/Frontend/youRJube/src/app/subscription/subscription.component.html
+++ b/Frontend/youRJube/src/app/subscription/subscription.component.html
@@ -1,1 +1,18 @@
-<p>subscription works!</p>
+<div *ngIf="!isUserSignedIn()" class="user-not-signedin-container">
+    <div class="logo">
+        <i class="fa fa-list" aria-hidden="true"></i>
+    </div>
+    
+    <div class="text1">
+        Don't miss new videos 
+    </div>
+
+    <div class="text2">
+        Sign in to see updates from your favorite yoRJube channels
+    </div>
+
+</div>
+
+<div *ngIf="isUserSignedIn()" class="user-signedin-container">
+    subscription {{user.name}}
+</div>
