Added upload video

--- a/Frontend/youRJube/src/app/app.component.html
+++ b/Frontend/youRJube/src/app/app.component.html
@@ -20,8 +20,8 @@
   
     <div class="usercontrol-container">
 
-      <div *ngIf="isUserSignedIn()" class="upload-video">
-        <a href="#"  >
+      <div class="upload-video">
+        <a routerLink="upload" >
           <i class="fa fa-video-camera" aria-hidden="true"></i>
         </a>
       </div>
