--- a/Frontend/youRJube/src/app/premium-membership/premium-membership.component.html
+++ b/Frontend/youRJube/src/app/premium-membership/premium-membership.component.html
@@ -16,10 +16,10 @@
         <p>Billing Plans</p>
 
         <form action="">
-            <input type="radio" name="billing-plan" id="monthly">
+            <input type="radio" name="billing-plan" id="monthly" value="Monthly">
             <label for="monthly">Monthly</label>
             <br>
-            <input type="radio" name="billing-plan" id="annualy">
+            <input type="radio" name="billing-plan" id="annualy" value="Annualy">
             <label for="annualy">Annualy</label>
             <br>
             <button type="submit" class="register-button">Register Plan</button>
