--- a/Frontend/youRJube/src/app/category/category.component.html
+++ b/Frontend/youRJube/src/app/category/category.component.html
@@ -1,1 +1,81 @@
-<p>category works!</p>
+<div class="container">
+    <div class="category-list">
+        <ul>
+            <li>
+                <a>
+                    <span class="icon"><i class="fa fa-music" aria-hidden="true"></i></span>
+                    <span class="name">Music</span>
+                </a>   
+            </li>
+            <li>                
+                <a>
+                    <span class="icon"><i class="fa fa-futbol-o" aria-hidden="true"></i></span>
+                    <span class="name">Sport</span>
+                </a>
+            </li>
+            <li>
+                <a>
+                    <span class="icon"><i class="fa fa-gamepad" aria-hidden="true"></i></span>
+                    <span class="name">Gaming</span>
+                </a>
+            </li>
+            <li>
+                <a>
+                    <span class="icon"><i class="fa fa-smile-o" aria-hidden="true"></i></span>
+                    <span class="name">Entertaiment</span>
+                </a>
+            </li>
+            <li>
+                <a>
+                    <span class="icon"><i class="fa fa-newspaper-o" aria-hidden="true"></i></span>
+                    <span class="name">News</span>
+                </a>
+            </li>
+            <li>
+                <a>
+                    <span class="icon"><i class="fa fa-plane" aria-hidden="true"></i></span>
+                    <span class="name">Travel</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="video-list-container">
+        <div class="video-container">
+            <div class="title">
+                Popular All Time
+            </div>
+
+            <div class="video-list">
+                <app-video-display *ngFor="let v of videos" [vid]="v"></app-video-display>
+            </div>
+        </div>
+
+        <div class="video-container">
+            <div class="title">
+                Popular This Week
+            </div>
+            <div class="video-list">
+                <app-video-display *ngFor="let v of videos" [vid]="v"></app-video-display>
+            </div>
+        </div>
+
+        <div class="video-container">
+            <div class="title">
+                Popular of the Month
+            </div>
+            <div class="video-list">
+                <app-video-display *ngFor="let v of videos" [vid]="v"></app-video-display>
+            </div>
+        </div>
+
+        <div class="video-container">
+            <div class="title">
+                Recently Uploaded
+            </div>
+            <div class="video-list">
+                <app-video-display *ngFor="let v of videos" [vid]="v"></app-video-display>
+            </div>
+        </div>
+    </div>
+</div>
