--- a/Frontend/youRJube/src/app/home/home.component.html
+++ b/Frontend/youRJube/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="container">
+    <h3 class="recommended-title">Recommended Video</h3>
+
+    <div class="recommended-video-container">
+        <app-video-display *ngFor="let v of videos" [vid]="v"></app-video-display>
+    </div>
+
+</div>
