--- a/Frontend/youRJube/src/app/premium-membership/premium-membership.component.scss
+++ b/Frontend/youRJube/src/app/premium-membership/premium-membership.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding-top: 7vh;
 
     .logo{
         display: flex;
