--- a/Frontend/youRJube/src/app/subscription/subscription.component.scss
+++ b/Frontend/youRJube/src/app/subscription/subscription.component.scss
@@ -21,6 +21,29 @@
         margin-top: 2vh;
         font-size: 14px;
     }
+}
 
+.user-signedin-container{
+    
+    .video-list-container{
 
+        .video-container{
+            padding-bottom: 2vh;
+            margin-top: 2vh;
+            border-bottom: 2px lightgray solid;
+            width: 80vw;
+
+            .title{
+                font-size: 20px;
+                font-weight: bold;
+            }
+
+            .video-list{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+            }
+
+        }
+    }
 }
