--- a/Frontend/youRJube/src/app/premium-membership/premium-membership.component.html
+++ b/Frontend/youRJube/src/app/premium-membership/premium-membership.component.html
@@ -15,15 +15,17 @@
     <div class="billing-plans">
         <p>Billing Plans</p>
 
-        <form action="">
-            <input type="radio" name="billing-plan" id="monthly" value="Monthly">
-            <label for="monthly">Monthly</label>
-            <br>
-            <input type="radio" name="billing-plan" id="annualy" value="Annualy">
-            <label for="annualy">Annualy</label>
-            <br>
-            <button type="submit" class="register-button">Register Plan</button>
-        </form>
+        <input type="radio" name="billing-plan" id="monthly" value="Monthly" (change)="changePlan($event)">
+        <label for="monthly">Monthly</label>
+        <br>
+        <input type="radio" name="billing-plan" id="annualy" value="Annualy" (change)="changePlan($event)">
+        <label for="annualy">Annualy</label>
+        <br>
+        <button class="register-button" (click)="registerPlan()">Register Plan</button>
         
+    </div>
+
+    <div id="error">
+        Please choose a plan!
     </div>
 </div>
