--- a/Frontend/youRJube/src/app/video-display/video-display.component.html
+++ b/Frontend/youRJube/src/app/video-display/video-display.component.html
@@ -1,26 +1,25 @@
-<div class="container">
+<div class="container" *ngIf="doneLoading">
     <a href="watch">
         <div class="thumbnail">
-            <img src="{{video.vidthumbnail}}" alt="" width="288px" height="162px">
+            <img src="{{video.thumbnail}}" alt="" width="288px" height="162px">
         </div>
     </a>
     <div class="video-description-container">
-        <img src="{{video.vidpropic}}" alt="" width="50px" class="profile-pic">
+        <img src="{{channel[0].icon}}" alt="" width="50px" class="profile-pic">
         <a href="watch">
             <div class="content-container">
                 <div class="title">
-                    This is title
+                    {{video.title}}
                 </div>
                 <div class="channel-name">
-                    This is the name of the channel This is the name of the channel 
-                    This is the name of the channel This is the name of the channel 
+                    {{channel[0].name}}
                 </div>
                 <div class="views-count">
-                    1M views
+                    {{video.view}} views
                 </div>
                     |  
                 <div class="date-uploaded">
-                    1 year ago
+                   {{dateOutput}}
                 </div>
             </div>
         </a>
