--- a/Frontend/youRJube/src/app/video-upload/video-upload.component.html
+++ b/Frontend/youRJube/src/app/video-upload/video-upload.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <!-- <div id="first-container">
+    <div id="first-container">
         <div class="dropzone" appDropZone (hovered)="toggleHover($event)" 
         (dropped)="handleFileInput($event)" [class.hovering]="isHovering">
     
@@ -22,7 +22,7 @@
         <div class="upload-button-container">
             <button (click)="startUploadVideo()" class="upload-button">Upload</button>
         </div>
-    </div> -->
+    </div>
 
     <div id="second-container">
         <div class="video-details">
