--- a/Frontend/youRJube/src/app/app.component.html
+++ b/Frontend/youRJube/src/app/app.component.html
@@ -20,7 +20,7 @@
   
     <div class="usercontrol-container">
 
-      <div class="upload-video">
+      <div *ngIf="isUserSignedIn()" class="upload-video">
         <a routerLink="upload" >
           <i class="fa fa-video-camera" aria-hidden="true"></i>
         </a>
@@ -124,10 +124,10 @@
 
     <div class="externalLinks">
       <ul class="links">
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Terms</a></li>
-        <li><a href="#">Copyright</a></li>
-        <li><a href="#">Privacy</a></li>
+        <li><a routerLink="about-us">About us</a></li>
+        <li><a routerLink="terms">Terms</a></li>
+        <li><a routerLink="copyright">Copyright</a></li>
+        <li><a routerLink="privacy">Privacy</a></li>
       </ul>
     </div>
 
