--- a/Frontend/youRJube/src/app/video-upload/video-upload.component.scss
+++ b/Frontend/youRJube/src/app/video-upload/video-upload.component.scss
@@ -74,7 +74,7 @@
 
     #second-container{
         display: none;
-        display: flex;
+        // display: flex;
         flex-direction: row;
         justify-content: space-around;
 
@@ -118,6 +118,7 @@
                     #description{
                         padding: 5px;
                         font-size: 14px;
+                        white-space: pre-wrap;
                     }
                 }
 
